feat: 完善標籤功能與購物車體驗 - 統一標籤系統，標籤雲可點擊，新增標籤詳情頁，美化購物車空狀態，修復結帳頁面，修復標籤API枚舉類型問題，添加itsdangerous依賴

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ python-dotenv==1.0.0
 httpx==0.25.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
+itsdangerous==2.2.0
 
 # Database drivers
 pymysql==1.1.0
