--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,14 @@
     "dev": "vite --host 0.0.0.0 --port 3000",
     "build": "vite build",
     "build:watch": "vite build --watch",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:all": "npm run test:run && npm run test:e2e"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
@@ -21,6 +28,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^24.1.0",
+    "happy-dom": "^14.12.0",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@playwright/test": "^1.45.1",
+    "cross-env": "^7.0.3"
   }
 }
