--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.34.3
 sqlalchemy==2.0.23
 alembic==1.12.1
 pydantic==2.10.6
+pydantic-settings==2.0.3
 python-multipart==0.0.6
 jinja2==3.1.2
 python-jose[cryptography]==3.3.0
@@ -20,4 +21,9 @@ pymysql==1.1.0
 psycopg2-binary==2.9.9
 
 # Additional utilities
-python-slugify==8.0.1 
+python-slugify==8.0.1
+
+# Payment SDKs
+paypalrestsdk==1.13.1
+requests==2.31.0
+pycryptodome==3.18.0 
