--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,70 @@
-fastapi==0.115.6
-uvicorn[standard]==0.34.3
-sqlalchemy==2.0.23
 alembic==1.12.1
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==5.0.1
+bcrypt==4.3.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.1.8
+cryptography==45.0.4
+dnspython==2.7.0
+ecdsa==0.19.1
+email-validator==2.1.0
+exceptiongroup==1.3.0
+Faker==37.4.0
+fastapi==0.115.6
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.25.2
+idna==3.10
+importlib_metadata==8.7.0
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.2
+Mako==1.3.10
+Markdown==3.8.1
+MarkupSafe==3.0.2
+packaging==25.0
+passlib==1.7.4
+paypalrestsdk==1.13.1
+pillow==11.2.1
+pluggy==1.6.0
+psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pycparser==2.22
+pycryptodome==3.18.0
 pydantic==2.10.6
 pydantic-settings==2.0.3
-python-multipart==0.0.6
-jinja2==3.1.2
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-email-validator==2.1.0
-python-dotenv==1.0.0
-httpx==0.25.2
+pydantic_core==2.27.2
+PyMySQL==1.1.0
+pyOpenSSL==25.1.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
-itsdangerous==2.2.0
-redis==5.0.1
-
-# Database drivers
-pymysql==1.1.0
-psycopg2-binary==2.9.9
-
-# Additional utilities
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
 python-slugify==8.0.1
-
-# Payment SDKs
-paypalrestsdk==1.13.1
+PyYAML==6.0.2
+redis==5.0.1
 requests==2.31.0
-pycryptodome==3.18.0 
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.23
+starlette==0.41.3
+text-unidecode==1.3
+tomli==2.2.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
+urllib3==2.4.0
+user-agents==2.2.0
+uvicorn==0.34.3
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
+zipp==3.23.0
