--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ PyMySQL==1.1.0
 pyOpenSSL==25.1.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
