更新 .gitignore 檔案以排除特定靜態資源，並新增 logo.svg 和 favicon.svg 檔案。修改 install.sh 腳本以適應新的前端目錄結構，並更新 start.sh 腳本以反映開發模式的端口設定。移除不再使用的 start_server.sh 腳本，並新增 admin-src 目錄及其相關檔案以支援管理後台功能。新增多個 Vue 組件和測試檔案，強化前端功能與測試覆蓋率。

--- a/.gitignore
+++ b/.gitignore
@@ -75,16 +75,18 @@ yarn-debug.log*
 yarn-error.log*
 
 # Frontend
-frontend/node_modules/
-frontend/dist/
-frontend/.nuxt/
-frontend/.output/
-frontend/.vite/
+admin-src/node_modules/
+admin-src/dist/
+admin-src/.nuxt/
+admin-src/.output/
+admin-src/.vite/
 
 # Static files
 app/static/assets/
 app/static/public/
-app/static/images/
+app/static/images/*
+!app/static/images/logo.svg
+!app/static/images/favicon.svg
 app/static/css/style.css
 app/static/js/
 
