style: 更新網站名稱及相關資源路徑
將網站名稱從 "BlogCommerce" 更新為 "伴獸家"，並調整
相關資源的路徑。這些變更涵蓋了多個檔案，包括
環境設定、HTML 模板和配置檔，確保整體一致性。

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # 複製指令: cp .env.example .env
 
 # 網站基本資訊
-SITE_NAME="BlogCommerce"
+SITE_NAME="伴獸家"
 SITE_DESCRIPTION="部落格與電商整合平台"
 SITE_URL="http://localhost:8001"
 SITE_LOGO="/static/images/logo.png"
