--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,18 @@ PyMySQL==1.1.0
 pyOpenSSL==25.1.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+pytest-html==4.1.1
+pytest-xdist==3.5.0
+pytest-mock==3.12.0
+pytest-timeout==2.2.0
+pytest-env==1.1.0
+pytest-metadata==3.1.1
+coverage==7.4.4
+locust==2.24.1
+flake8==6.1.0
+black==24.2.0
+isort==5.13.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jose==3.3.0
