新增 Alembic 資料庫遷移配置，包含環境設定、初始遷移檔案及自動檢查遷移狀態的功能。更新 .gitignore 檔案以排除 Alembic 相關檔案，並在啟動腳本中整合資料庫遷移檢查與執行邏輯，提升專案的資料庫管理效率。

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,10 @@ app/static/uploads/
 test_*.py
 *_test.py
 
-
 # Test files (可選)
 tests/
+
+# Alembic migrations (自動生成的遷移文件)
+alembic/versions/
+alembic/__pycache__/
+todo.md
