新增運費級距管理功能，包括前端頁面、後端API及資料模型，支援運費級距的CRUD操作及計算邏輯，並更新相關路由與資料結構，提升系統的可維護性與效能。

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,8 @@ markers =
     cart: 購物車相關測試
     analytics: 分析相關測試
     posts: 文章相關測試
+    shipping_tiers: 運費級距相關測試
+    banners: 輪播廣告相關測試
     slow: 慢速測試
     requires_db: 需要資料庫的測試
     requires_redis: 需要 Redis 的測試
