--- a/admin-src/package.json
+++ b/admin-src/package.json
@@ -24,7 +24,8 @@
     "marked": "^15.0.12",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
